# fastapi-sandbox

./: .env.example  README.md  docker-compose.dev.yml  docker-compose.test.override.yml  justfile  pyproject.toml
.github/workflows/: run-tests.yml
api/: Dockerfile  main.py
tests/: CLAUDE.md  conftest.py
tests/e2e/: conftest.py  test_api.py
tests/intg/: conftest.py  test_api_config.py
tests/unit/: test_main.py
